Ajustando ícones do cadastro de produtos

--- a/medsales/medsales-app/src/main/webapp/cadastros/produto/produtoEdit.xhtml
+++ b/medsales/medsales-app/src/main/webapp/cadastros/produto/produtoEdit.xhtml
@@ -20,7 +20,7 @@
 			<p:outputLabel value="Preço: " for="preco" />
 			<p:outputPanel>
 				<pe:inputNumber id="preco" value="#{produtoAction.novoPreco.valor}" symbol="R$ " />
-				<p:commandButton id="histPrecoBtn" icon="ui-icon-search" type="button" />
+				<p:commandButton id="histPrecoBtn" icon="ui-icon-extlink" type="button" />
 			</p:outputPanel>
 			<p:message for="preco" />
 		</p:panelGrid>
