Escrevendo testes complementares para ProdutoFacade.java

--- a/medsales/medsales-app/src/main/webapp/index.xhtml
+++ b/medsales/medsales-app/src/main/webapp/index.xhtml
@@ -11,6 +11,15 @@
 
 <ui:composition template="/templates/default/main.xhtml">
 
+	<ui:define name="content">
+	
+		<h:form>
+		
+			<h:commandButton value="Carregar Dados" action="#{dataStartupService.load()}" />
+		
+		</h:form>
+	
+	</ui:define>
 </ui:composition>
 
 </html>
