--- a/medsales/medsales-app/src/main/webapp/cadastros/produto/produtoEdit.xhtml
+++ b/medsales/medsales-app/src/main/webapp/cadastros/produto/produtoEdit.xhtml
@@ -19,7 +19,7 @@
 
 			<p:outputLabel value="Preço: " for="preco" />
 			<p:outputPanel>
-				<pe:inputNumber id="preco" value="#{produtoAction.novoPreco.valor}" symbol="R$ " />
+				<pe:inputNumber id="preco" value="#{produtoAction.novoPreco.valor}" symbol="R$ " required="true"/>
 				<p:commandButton id="histPrecoBtn" icon="ui-icon-extlink" type="button" />
 			</p:outputPanel>
 			<p:message for="preco" />
