Uma entrada já pode ser incluída via WEB.

--- a/medsales/medsales-app/src/main/webapp/movimentacao/entrada.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimentacao/entrada.xhtml
@@ -106,7 +106,7 @@ function limparCampoProduto() {
 
 			<p:commandButton value="Cancelar" action="#{entradaAction.concluir}" update=":content-panel" />
 			<p:commandButton value="Salvar Rascunho" action="#{entradaAction.salvarRacunho}" update=":content-panel" />
-			<p:commandButton value="Concluir" action="#{entradaAction.concluir}" update=":content-panel" />
+			<p:commandButton value="Concluir" actionListener="#{entradaAction.concluir}" update=":content-panel" />
 
 		</h:form>
 	</ui:define>
