--- a/medsales/medsales-app/src/main/webapp/index.xhtml
+++ b/medsales/medsales-app/src/main/webapp/index.xhtml
@@ -15,7 +15,7 @@
 	
 		<h:form>
 		
-			<h:commandButton value="Carregar Dados" action="#{dataStartupService.load()}" />
+			<p:commandButton value="Carregar Dados" action="#{dataStartupService.load()}" />
 		
 		</h:form>
 	
